<resources>
    <string name="app_name">DoSomething</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="actions">Actions</string>
    <string name="actions_no_network_retry">Try Again</string>
    <string name="actions_no_network_text1">No network connection!</string>
    <string name="actions_no_network_text2">We can\'t connect to the internet, please check your
        connection and try again.</string>
    <string name="cause_default_desc">Find volunteer opportunities.</string>
    <string name="cause_animals_desc">Sometimes Simba or Bambi or Dory need your help. You know, in real life.</string>
    <string name="cause_bullying_desc">Save the drama for your mama.</string>
    <string name="cause_disasters_desc">When bad things happen, a little good goes a long way. </string>
    <string name="cause_discrimination_desc">Racism. Sexism. Ableism. Down with all the isms.</string>
    <string name="cause_education_desc">Want to know how to fix our broken system? Listen up -- school is in session.</string>
    <string name="cause_environment_desc">This planet is the only one we\'ve got. Trust us: Mars is totally overrated.</string>
    <string name="cause_homelessness_desc">Over a million young Americans experience homelessness. Take a stand for them.</string>
    <string name="cause_mental_health_desc">Time to make the mind top of mind.</string>
    <string name="cause_physical_health_desc">Strong people for strong bodies.</string>
    <string name="cause_poverty_desc">What you need to help those in need.</string>
    <string name="cause_relationships_desc">BFs, baes, and boos. Let\'s take action when the personal goes public.</string>
    <string name="cause_sex_desc">The hottest kind of sex? Consensual.</string>
    <string name="cause_violence_desc">Learn how to fight back without fighting back.</string>
    <string name="campaign_sponsor">Powered by</string>
    <string name="cta_photo_in_hub">See Your Photo</string>
    <string name="hub">Me</string>
    <string name="hub_actions_label">Actions</string>
    <string name="hub_current_label">Actions I\'m Doing Now</string>
    <string name="hub_current_label_public">Actions They\'re Doing Now</string>
    <string name="hub_empty_action_button">Take Me There</string>
    <string name="hub_empty_public">Hm, we aren\'t able to find any activity for this user.</string>
    <string name="hub_empty_text1">You haven\'t started any actions yet.</string>
    <string name="hub_empty_text2">And you totally should! Shit is happening in the world -- find out how to do something about it.</string>
	<string name="hub_error_text_title">Having bad Internet karma today?</string>
	<string name="hub_error_text_detail">Check the Internet connection on your phone to make sure it\'s working, then click the button below.</string>
    <string name="hub_done_label">Actions I\'ve Done</string>
    <string name="hub_done_label_public">Actions They\'ve Done</string>
    <string name="hub_photos_label">Photos</string>
    <string name="nav_news">News</string>
    <string name="notifications">Notifications</string>
    <string name="staff_pick">Staff pick</string>
    <string name="stop_being_bored">Do This Now</string>
    <string name="youre_doing_this">You\'re Doing This</string>
    <string name="people_doing_stuff">Who’s Doing It Now</string>
    <string name="phone_email">Phone Number or Email</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number (Optional)</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="show_me_how">Get Started</string>
    <string name="register">Register</string>
    <string name="birthday">Birthday</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="expires_in">Expires in</string>
    <string name="share_photo">Share Your Photo</string>
    <string name="show_off">Prove It</string>
    <string name="friends">Friends</string>
    <string name="desc_login_reg">Let’s make this official.\nCreate an account to find news around
        your top causes and ways to take action.
    </string>
    <string name="settings">Settings</string>
    <string name="rate">Rate DoSomething</string>
    <string name="people_doing_it">Who\'s Doing It Now</string>
    <string name="account">Account</string>
    <string name="change_photo">Change Photo</string>
    <string name="change_photo_confirmation">Hey, good lookin\'. You\'ve successfully changed your
        profile photo.</string>
    <string name="receive_notifications">Receive Notifications</string>
    <string name="change_email">Change Email</string>
    <string name="change_number">Change Number</string>
    <string name="change_password">Change Password</string>
    <string name="password_hint">Password (6+ characters...make it tricky!)</string>
    <string name="logout">Log Out</string>
    <string name="change_notifications_prefs">Change Notification Preferences</string>
    <string name="select_picture">Select or Take Picture</string>
    <string name="share_news">%1$s - %2$s Read this on the DoSomething app.
        https://play.google.com/store/apps/details?id=org.dosomething.letsdothis
    </string>
    <string name="share_reportback_message">Bam! I %1$s %2$s %3$s on the DoSomething app. Want to do more
        un-boring stuff with me? https://play.google.com/store/apps/details?id=org.dosomething.letsdothis
    </string>
    <string name="done">Done</string>
    <string name="error_action_closed_campaign">Sorry! This campaign is now closed.</string>
    <string name="error_action_sms_game">This experience can only be done through text messaging. Text APP to 38383 to get started!</string>
    <string name="error_avatar_upload">There was an error uploading your photo</string>
    <string name="error_campaign_data">There was an error loading the campaign data</string>
    <string name="error_hub_sync">There was an error syncing your profile</string>
    <string name="error_login_phone_email">Must not be empty</string>
    <string name="error_login_password">Must not be empty</string>
    <string name="error_network_main_title">There\'s nothing here!</string>
    <string name="error_network_main_body">Either we can\'t connect to the internet or there are no
        actions available right now.</string>
    <string name="error_network_main_button">Try Again</string>
    <string name="error_photo_save">There was an error saving the photo. Please try selecting your photo again.</string>
    <string name="error_photo_share">There was an error loading your photo</string>
    <string name="error_public_profile_load">Unable to load this person\'s profile</string>
    <string name="error_registration_email">We need a valid email</string>
    <string name="error_registration_first_name">We need your first name</string>
    <string name="error_registration_password">Your password must be 6+ characters</string>
    <string name="error_reportback_emoji_caption">You cannot use emojis or symbols in your caption :(</string>
    <string name="error_reportback_invalid_caption">Please enter a valid caption</string>
    <string name="error_reportback_invalid_quantity">Please enter a valid number</string>
    <string name="error_signup">There was an error signing up for the campaign</string>
    <string name="tell_us">Let\'s get to know each other.</string>
    <string name="footer_register">Have a DoSomething.org account? Sign in</string>
    <string name="footer_forgot_pw">Forgot Password</string>
    <string name="forgot_pw_link">https://www.dosomething.org/user/password</string>
    <string name="ctia">Creating an account means you agree to our Privacy Policy &amp; to receive
        our weekly update. Message &amp; data rates may apply. Text STOP to opt-out, HELP for help
    </string>
    <string name="crop_photo">crop photo</string>
    <string name="report_back_caption">Caption your photo (60 chars or less)</string>
    <string name="save_photo">Save Photo</string>
    <string name="upload_photo">upload photo</string>
    <string name="app_intro_description">Strike against boredom.
    </string>
    <string name="signin_intro">Sign in with your DoSomething.org account.</string>
    <string name="footer_login">Don’t have an account? Register here</string>
    <string name="ok">Ok</string>
    <string name="prompt_logout">No guilt here, but we\'ll definitely miss you. Come back anytime, ok?</string>
    <string name="cancel">Cancel</string>
    <string name="do_something_about_it">Do This</string>
    <string name="share_code">Share Code</string>
    <string name="campaign_reportback_prompt">When you\'re done, submit a pic of yourself in action.
        #picsoritdidnthappen
    </string>
    <string name="campaign_reportback_confirmation">Stunning! You submitted your action for approval. </string>
    <string name="campaign_signup_confirmation">Niiiiice. You\'re signed up for this campaign.</string>
    <string name="campaign_signup_failed">Oops! Our bad. Looks like there was an issue with that
        request. We\'re looking into it now!
    </string>
    <string name="change_phone_hint">Enter a new phone number</string>
    <string name="change_email_hint">Enter a new email</string>
    <string name="change_password_old_hint">Enter your old password</string>
    <string name="change_password1_hint">Enter the new password</string>
    <string name="change_password2_hint">Re-enter the new password</string>
    <string name="interest_0">Hot</string>
    <string name="interest_1">...</string>
    <string name="interest_2">...</string>
    <string name="interest_3">...</string>
    <string name="forgot_pw">Reset Password</string>
    <string name="notification_kudos">notification_kudos</string>
    <string name="notification_friend">notification_friend</string>
    <string name="notification_campaign">notification_campaign</string>
    <string name="notification_pref">Notification Preferences</string>
    <string name="pref_email_key">pref_email_key</string>
    <string name="pref_feedback">Give Us Your Feedback</string>
    <string name="pref_suggestion_link">Have your own ideas? Fill out this form and let us know.</string>
    <string name="pref_version_key">pref_version_key</string>
    <string name="pref_version_text">v%1$s</string>
	<string name="pref_faq">FAQ</string>
    <string name="progress_dialog_hub">Loading profile...</string>
    <string name="progress_dialog_login">Signing in...</string>
    <string name="progress_dialog_logout">Logging out...</string>
    <string name="progress_dialog_register">Creating account...</string>
    <string name="progress_dialog_wait">Please wait...</string>
    <string name="expired_already">Oof. This action has expired. Let’s freshen things up.</string>
    <string name="max_kudos">99+</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="reportback_toolbar_title_template">I Did %1$s</string>
    <string name="reportback_upload_hint">Number of %1$s %2$s</string>
    <string name="confirm_fb">Use your Facebook details to make a DoSomething.org profile!</string>
    <string name="refresh_copy">Get New Actions</string>
    <string name="uploading">uploading…</string>
    <string name="cancel_search">Cancel Search</string>
    <string name="intro_title_1">Information \u2192 Action</string>
    <string name="intro_desc_1">Breaking news. You\'re on it. Learn what\'s happening in the world &amp; what you can do about it.</string>
    <string name="intro_title_2">A Global Movement + You</string>
    <string name="intro_desc_2">Send a photo of yourself in action to connect with a worldwide community of other Doers.</string>
    <string name="fail_register">Registration failed</string>
</resources>