<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <org.dosomething.letsdothis.ui.views.typeface.preferences.CustomPreferenceCategory
        android:title="@string/notifications">
        <org.dosomething.letsdothis.ui.views.typeface.preferences.CustomSwitchPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="@string/notification_kudos"
            android:title="When I Receive Kudos"/>

        <org.dosomething.letsdothis.ui.views.typeface.preferences.CustomSwitchPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="@string/notification_friend"
            android:title="When A Friend Joins My Campaign"/>

        <org.dosomething.letsdothis.ui.views.typeface.preferences.CustomSwitchPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="@string/notification_campaign"
            android:title="When New Campaigns Are Available"/>
    </org.dosomething.letsdothis.ui.views.typeface.preferences.CustomPreferenceCategory>

</PreferenceScreen>