<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <org.dosomething.letsdothis.ui.views.typeface.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_medium"
        android:text="@string/hub_empty_text1"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:typeface="brandon_bold"/>

    <org.dosomething.letsdothis.ui.views.typeface.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_medium"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:gravity="center_horizontal"
        android:text="@string/hub_empty_text2"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_medium"
        app:typeface="brandon_regular"/>

    <org.dosomething.letsdothis.ui.views.typeface.CustomButton
        android:id="@+id/actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_large"
        android:text="@string/hub_empty_action_button"
        android:textAllCaps="true"
        app:typeface="brandon_bold"
        style="@style/SecondaryButton"/>

</LinearLayout>