<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/web_orange">

    <ImageView
        android:id="@+id/lightning"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:scaleType="centerCrop"
        android:src="@drawable/orange_lightning"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small">


        <ImageView
            android:layout_width="@dimen/login_intro_w"
            android:layout_height="@dimen/login_intro_h"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/padding_large"
            android:layout_marginTop="@dimen/padding_xlarge"
            android:src="@drawable/do_something_logo"/>

        <org.dosomething.letsdothis.ui.views.typeface.CustomEditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:inputType="textPassword"
            android:hint="@string/change_password_old_hint"/>

        <org.dosomething.letsdothis.ui.views.typeface.CustomEditText
            android:id="@+id/new_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:inputType="textPassword"
            android:hint="@string/change_password1_hint"/>

        <org.dosomething.letsdothis.ui.views.typeface.CustomEditText
            android:id="@+id/new_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:inputType="textPassword"
            android:hint="@string/change_password2_hint"/>

        <org.dosomething.letsdothis.ui.views.typeface.CustomButton
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:text="Confirm"
            android:textAllCaps="true"
            app:typeface="brandon_bold"/>

    </LinearLayout>

</RelativeLayout>